MDEV-13430 InnoDB upgrade from previous versions to 10.3 is not possible

Most of this fix was merged from a backport to 10.2.

recv_find_max_checkpoint(): Do not return DB_SUCCESS on an error.